# web-browser-lsp

./: Cargo.toml  Makefile  README.md  mapping_lsp.md
client/nvim-lspconfig/: example.vim
client/nvim-lspconfig/lua/: web_browser_lsp.lua
src/: lib.rs  lsp_ext.rs  main.rs  server.rs  transport.rs  worker.rs
src/worker/: lsp.rs
