[package]
name = "web-browser-lsp"
version = "0.0.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
playwright = "0.0.16"
structopt = "0.3.21"
anyhow = "1.0.40"
thiserror = "1.0.24"
tokio = { version = "1.5.0", features = ["macros", "rt-multi-thread"] }
async-trait = "0.1.50"
serde = { version = "1.0.125", features = ["derive"] }
serde_json = { version = "1.0.64", features = ["raw_value"] }
lsp-types = { version = "0.89.0", features = ["proposed"] }
lsp-server = "0.5.0"
log = "0.4.14"
crossbeam-channel = "0.5.1"
futures = "0.3.14"
log4rs = "1.0.0"
